--- a/contacto.html
+++ b/contacto.html
@@ -88,9 +88,9 @@
         <p class="col-md-4 mb-0 text-muted">&copy; 2021 Glasses & Sunglasses </p>
   
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="facebook"><i class="fab fa-facebook-square"></i></a></li>
-          <li class="nav-item"><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
-          <li class="nav-item"><a href="#" class="email"><i class="fas fa-envelope-square"></i></a></li>
+          <li class="nav-item"><a href="https://www.facebook.com" class="facebook" target="blanc"><i class="fab fa-facebook-square"></i></a></li>
+          <li class="nav-item"><a href="https://www.instagram.com/?hl=es-la" class="instagram" target="blanc"><i class="fab fa-instagram"></i></a></li>
+          <li class="nav-item"><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSPFdRWnrWfSRSHFQbBLJxbDMjtgWQQQQLPSDDTlJXJNnFmPnBVkZkWsFwcNKGsFzkqWwBbc" class="email" target="blanc"><i class="fas fa-envelope-square"></i></a></li>
         </ul>
       </footer>
     </div>
