--- a/contacto.html
+++ b/contacto.html
@@ -59,12 +59,14 @@
                 <input type="text" name="apellido" 
                 placeholder="Perez">               
             </div>
-            <br>
             <div>
                 <label for="email">Mail</label>
                 <input type="email" required>
             </div>
-            <br>
+            <div>
+              <label for="number">Telefono</label>
+              <input type="number">
+          </div>
             <div>
                 <label for="Pais">Asunto</label>
                 <select name="Pais" id="">
